# Cos6502

./: .gitignore  CMakeLists.txt  README.md
core/: cos6502.cpp  cos6502.hpp  cp6502.cpp  cp6502.hpp  main  main_6502.hpp
stest/: -m  test_code.ms  test_code.prg
test/: cos6502.cpp  main_6502.cpp  test_JumpsAndCalls.cpp  test_LoadRegister.cpp  test_Logical.cpp  test_StackOperations.cpp  test_StoreRegister.cpp  test_loadregister.cpp  test_storeregister.cpp
utest/: test_AddWithCarry.cpp  test_Branches.cpp  test_Compare.cpp  test_IncrementDecrements.cpp  test_LoadProgram.cpp  test_LoadRegister.cpp  test_Logical.cpp  test_RegisterTransfers.cpp  test_Shifts.cpp  test_StackOperations.cpp  test_StatusFlagChanges.cpp  test_SubstractWithCarry.cpp  test_SystemFunctions.cpp
